[package]
name = "rustiant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.11", features = ["dynamic_linking"] } 
bevy-inspector-egui = "0.19.0"
ron = "0.8.1"
serde = { version = "1.0.188", features = ["derive"] }
